# xerces-c

./: INSTALL  configure.ac
3.0-unstable/: Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac  credits.txt  x_config.h  x_config.h.in  xerces_hdr_config.h  xerces_hdr_config.h.in
3.0-unstable/Projects/Win32/VC6/xerces-all/XercesLib/: XercesLib.dsp
3.0-unstable/Projects/Win32/VC7.1/xerces-all/XercesLib/: XercesLib.vcproj
3.0-unstable/config/: bootstrap  config.guess  config.sub  ltmain.sh  pretty-make
3.0-unstable/lib/: Makefile.am  Makefile.in  iswspace.c  stricmp.c  stricmp.h  strnicmp.c  strnicmp.h  towlower.c  towupper.c  xerces_compat.c
3.0-unstable/m4/: acx_pthread.m4  xerces_atomicopmgr_selection.m4  xerces_curl_prefix.m4  xerces_filemgr_selection.m4  xerces_icu_prefix.m4  xerces_int_types.m4  xerces_libwww_prefix.m4  xerces_msgloader_selection.m4  xerces_mutexmgr_selection.m4  xerces_netaccessor_selection.m4  xerces_no_threads.m4  xerces_pretty_make.m4  xerces_transcoder_selection.m4  xerces_type_16bit_int.m4  xerces_type_32bit_int.m4
3.0-unstable/samples/: Makefile.am  Makefile.in
3.0-unstable/src/: Makefile.am  Makefile.in
3.0-unstable/src/xercesc/framework/psvi/: XSValue.cpp
3.0-unstable/src/xercesc/util/: PlatformUtils.cpp  PlatformUtils.hpp  XMLAtomicOpMgr.hpp  XMLFileMgr.hpp  XMLMutexMgr.hpp  XMLString.cpp  XercesDefs.hpp  Xerces_autoconf_config.h  Xerces_autoconf_config.h.in  Xerces_autoconf_config.hpp.in  Xerces_hdr_config.h  Xerces_hdr_config.h.in
3.0-unstable/src/xercesc/util/AtomicOpManagers/: MacOSAtomicOpMgr.hpp  NoThreadAtomicOpMgr.hpp  PosixAtomicOpMgr.cpp  PosixAtomicOpMgr.hpp  WindowsAtomicOpMgr.cpp  WindowsAtomicOpMgr.hpp
3.0-unstable/src/xercesc/util/FileManagers/: PosixFileMgr.cpp  PosixFileMgr.hpp  WindowsFileMgr.cpp  WindowsFileMgr.hpp
3.0-unstable/src/xercesc/util/MutexManagers/: NoThreadMutexMgr.cpp  NoThreadMutexMgr.hpp  PosixMutexMgr.cpp  PosixMutexMgr.hpp  WindowsMutexMgr.cpp  WindowsMutexMgr.hpp
3.0-unstable/src/xercesc/util/NetAccessors/Curl/: CurlNetAccessor.cpp  CurlNetAccessor.loT  CurlURLInputStream.cpp  CurlURLInputStream.loT
3.0-unstable/src/xercesc/util/NetAccessors/WinSock/: BinHTTPURLInputStream.cpp
3.0-unstable/src/xercesc/util/Transcoders/Iconv/: IconvTransService.cpp
3.0-unstable/src/xercesc/util/Transcoders/MacOSUnicodeConverter/: MacOSUnicodeConverter.cpp  MacOSUnicodeConverter.hpp
3.0-unstable/src/xercesc/util/Transcoders/Uniconv390/: Uniconv390TransService.cpp
3.0-unstable/src/xercesc/util/Transcoders/Win32/: Win32TransService.hpp
3.0-unstable/tests/: Makefile.am  Makefile.in
doc/style/: loader.xml
doc/style/dtd/: changes.dtd  characters.ent  document.dtd  faqs.dtd
samples/src/DOMPrint/: DOMPrint.cpp
samples/src/SEnumVal/: SEnumVal.cpp
src/xercesc/dom/impl/: DOMCDATASectionImpl.cpp  DOMDocumentImpl.cpp  DOMDocumentImpl.hpp  DOMLSSerializerImpl.cpp  DOMStringPool.hpp  DOMTextImpl.cpp
src/xercesc/framework/: LocalFileFormatTarget.cpp  XMLFormatter.cpp
src/xercesc/framework/psvi/: XSComplexTypeDefinition.hpp
src/xercesc/internal/: IGXMLScanner2.cpp  SGXMLScanner.cpp
src/xercesc/parsers/: AbstractDOMParser.cpp
src/xercesc/util/: PlatformUtils.cpp  TransService.cpp  XMLChar.hpp  XMLDateTime.cpp  XMLDateTime.hpp  XMLString.cpp  XMLString.hpp  XMLURL.cpp  XMLUni.cpp  XMLUri.cpp  XercesVersion.hpp  Xerces_autoconf_config.msvc.hpp
src/xercesc/util/NetAccessors/MacOSURLAccessCF/: URLAccessCFBinInputStream.cpp
src/xercesc/util/Transcoders/ICU/: ICUTransService.cpp
src/xercesc/util/Transcoders/MacOSUnicodeConverter/: MacOSUnicodeConverter.cpp
src/xercesc/validators/common/: ContentSpecNode.cpp
src/xercesc/validators/datatype/: DatatypeValidatorFactory.cpp
src/xercesc/validators/schema/identity/: IC_Selector.hpp
src/xercesc/xinclude/: XIncludeUtils.cpp
tests/src/DOM/DOMTest/: DTest.cpp
tests/src/MemHandlerTest/: MemoryMonitor.cpp
tests/src/XSTSHarness/: XMLHarnessHandlers.cpp  XSTSHarness.cpp
transcoder/src/xercesc/dom/: DOMLSException.cpp
transcoder/src/xercesc/util/: PlatformUtils.cpp  TransService.cpp  TransService.hpp
transcoder/src/xercesc/util/Transcoders/Iconv/: IconvTransService.cpp
transcoder/src/xercesc/util/Transcoders/IconvGNU/: IconvGNUTransService.cpp  (+1 more)
(+2 files in other folders)
